--- a/WebApp/WebApp/Management/index.html
+++ b/WebApp/WebApp/Management/index.html
@@ -16,7 +16,6 @@
 
     <div class="text-center" style="padding:90px 0 30px 0;background:#fff;border-bottom:1px solid #ddd">
         <h1>TastyMenu</h1>
-        <a href="//www.clover.com/appmarket/apps/MMWF33E91QQHE"> <img src="//www.clover.com/assets/images/clover-app-market-button.svg" /></a>
     </div>
     
     <div class="col-sm-6 col-md-4 col-lg-3" style="margin:40px auto; float:none;">
@@ -46,7 +45,7 @@
       </form>
       <br/>
       <div class="col-xs-12">
-          <a href="signup.html"><button class="btn btn-block btn-block">Sign Up</button></a>
+          <a href="https://sandbox.dev.clover.com/oauth/authorize?client_id=4N828BG7ST2SW"><button class="btn btn-block btn-block">Sign Up with Clover</button></a>
         </div>
     </div>
     <script type="text/javascript">
