--- a/WebApp/WebApp/Management/dashboard.html
+++ b/WebApp/WebApp/Management/dashboard.html
@@ -28,9 +28,9 @@
                 <div id="cm-menu-items-wrapper">
                     <div id="cm-menu-scroller">
                         <ul class="cm-menu-items">
-                            <li class="active"><a href="dashboard.html" class="sf-house">主页</a></li>
-                            <li><a href="dashboard-sales.html" class="sf-dashboard">收入管理</a></li>
-                            <li><a href="dashboard-menu.html" class="sf-brick">菜单管理</a></li>
+                            <li class="active"><a href="dashboard.html" class="sf-house">Home - 主页</a></li>
+                            <li><a href="dashboard-sales.html" class="sf-dashboard">Manage earnings - 收入管理</a></li>
+                            <li><a href="dashboard-menu.html" class="sf-brick">Manage menu - 菜单管理</a></li>
                             
                         </ul>
                     </div>
@@ -46,7 +46,7 @@
                 <div class="dropdown pull-right">
                     <button class="btn btn-primary md-account-circle-white" data-toggle="dropdown"></button>
                     <ul class="dropdown-menu">
-                            <a href="index.html"><i class="fa fa-fw fa-sign-out"></i>登出</a>
+                            <a href="index.html"><i class="fa fa-fw fa-sign-out"></i>Logout - 登出</a>
                         </li>
                     </ul>
                 </div>
@@ -55,7 +55,7 @@
         <div id="global">
             <div class="container-fluid cm-container-white">
                 <h2 style="margin-top:0;">TastyMenu - 餐饮管理系统</h2> 
-                <p>管理您的餐厅信息</p>
+                <p>Manage your restaurant info - 管理您的餐厅信息</p>
             </div>
             <div class="container-fluid">
                 <div class="panel panel-default">
