--- a/WebApp/WebApp/Management/index.html
+++ b/WebApp/WebApp/Management/index.html
@@ -61,7 +61,7 @@
 			       sessionStorage.setItem("username", username);
 			       $(window).attr('location','dashboard.html');
    				} else{
-   					alert("用户名或密码填写错误");
+   					alert("Incorrect username/password. 用户名或密码填写错误");
    					return;
    				}
 			};
