--- a/WebApp/WebApp/Management/dashboard.html
+++ b/WebApp/WebApp/Management/dashboard.html
@@ -73,6 +73,19 @@
                         <div class="success">
 
                         </div>
+
+                        <div class="Edit">
+                            <label>Restaurant name - 餐厅名称</label>
+                            <input type="text" id="rest_name_signup" class="span3">
+                            <label>Address - 餐厅地址</label>
+                            <input type="text" id="rest_location_signup" class="span3">
+                            <label>Phone - 餐厅电话</label>
+                            <input type="text" id="phone_signup" class="span3">
+                            <label>Owner - 拥有者</label>
+                            <input type="text" id="owner_signup" class="span3">
+                            <br />
+                            <input type="submit" onclick="return updateInfo()" value="Update Info" class="btn btn-primary span3 submit">
+                        </div>
                     </div>
                 </div>
             </div>
