--- a/WebApp/WebApp/Management/index.html
+++ b/WebApp/WebApp/Management/index.html
@@ -1,19 +1,16 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap-clearmin.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/roboto.css">
     <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
-    <script src="assets/js/lib/jquery-2.1.3.min.js"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.0.3.min.js"></script>
     <title>Tasty Menu Login</title>
     <style></style>
-  </head>
+</head>
   <body class="cm-login">
-      
-
-
     <div class="text-center" style="padding:90px 0 30px 0;background:#fff;border-bottom:1px solid #ddd">
         <h1>TastyMenu</h1>
     </div>
@@ -21,10 +18,16 @@
     <div class="col-sm-6 col-md-4 col-lg-3" style="margin:40px auto; float:none;">
         <form>
             <div class="col-xs-12">
+                <h3>Tasty Menu works best with Clover!</h3>
+                <h4>Get Tasty Menu on Clover now.</h4>
+                <a href="//www.clover.com/appmarket/apps/MMWF33E91QQHE"> <img src="//www.clover.com/assets/images/clover-app-market-button.svg" /></a>
+                
+                <hr />
+                <span style="text-align:center">or</span>
+                <hr/>
                 <h4>Login</h4>
                 <div class="form-group">
                     <div class="input-group">
-
                         <div class="input-group-addon"><i class="fa fa-fw fa-user"></i></div>
                         <input type="text" id="username" class="form-control" placeholder="Username">
                     </div>
@@ -44,7 +47,7 @@
         </form>
         <br />
         <div class="col-xs-12">
-            <a href="https://www.clover.com/oauth/authorize?client_id=MMWF33E91QQHE"><button class="btn btn-block btn-block">Sign Up with Clover</button></a>
+            <a href="https://www.clover.com/oauth/authorize?client_id=MMWF33E91QQHE"><button class="btn btn-block btn-block">Sign Up</button></a>
         </div>
         <div class="col-xs-12">
             <br />
@@ -135,25 +138,22 @@
                     contentType: 'application/json',
                     success: function (data) {
                         console.log(data);
-                        if (data === "Exist") {
+                        console.log(data.toString() == "Exist");
+                        if (data.toString() == '"Exist"') {
                             // login
-                            var url = "/api/v1/admin/login";
-                            var username = global_merchant_id;
-                            var password = global_token;
-                            var xhttp = new XMLHttpRequest();
-                            xhttp.open("GET", url + "?username=" + username + "&password=" + password, false);
-                            xhttp.onreadystatechange = function () {
-                                if (this.readyState == 4 && this.status == 200) {
-                                    // Typical action to be performed when the document is ready:
-                                    sessionStorage.setItem("username", username);
-                                    $(window).attr('location', 'dashboard.html');
-                                } else {
-                                    alert("Incorrect username/password. 用户名或密码填写错误");
-                                    return;
-                                }
-                            };
 
-                            xhttp.send();
+                            var uri = "/api/v1/admin/login" + "?username=" + global_merchant_id + "&password=" + global_token + "&fromClover=true";
+                            console.log(uri);
+
+                            $.getJSON(uri)
+                                .done(function (data) {
+                                    alert("Logged in - 成功登陆")
+                                    sessionStorage.setItem("username", global_merchant_id);
+                                    $(window).attr('location', 'dashboard.html');
+                                })
+                                .fail(function (jqXHR, textStatus, err) {
+                                    alert("Please try again later - 系统繁忙，请稍后再试");
+                                });
                         } else if (global_merchant_id && global_token){
                             // signup
 
@@ -164,6 +164,8 @@
                                 "cloverId": global_merchant_id,
                                 "accessToken": global_token
                             };
+                            console.log(url);
+                            console.log(body);
 
                             $.ajax({
                                 url: url,
@@ -181,13 +183,7 @@
                                     alert("Please try again later - 系统繁忙，请稍后再试");
                                 },
                                 complete: function (response, text) {
-                                    if (text == "error") {
-                                        var $form = $('form');
-                                        $form.submit(function (e) {
-                                            e.preventDefault();
-                                            return false;
-                                        });
-                                    }
+                                    //alert("Please try again later - 系统繁忙，请稍后再试");
                                 }
                             })
                         }
