--- a/WebApp/WebApp/Management/signup.html
+++ b/WebApp/WebApp/Management/signup.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap-clearmin.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/roboto.css">
     <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
-    <script src="assets/js/lib/jquery-2.1.3.min.js"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.0.3.min.js"></script>
     <link href="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
     <title>Tasty Menu Sign Up</title>
